test ran a fresh clone and added some fir creation just incase

--- a/config/dummy_config.ini
+++ b/config/dummy_config.ini
@@ -1,6 +1,8 @@
 [TIME_PARAMS]
-time_max = 1611631654
-time_min = 1611631654
+; 1/27/21 4pm GMT
+time_max = 1611770383 
+; 1/27/20
+time_min = 1580147972 
 
 [CREDENTIAL_PARAMS]
 client_id = [insert here]
